# collatz

./: CMakeLists.txt  README.md  collatz.cpp  main.cpp
